--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .ipynb_checkpoints
 .DS_Store
 __pycache__
-preprocessing/propertyvalues/.ipynb_checkpoints/
+preprocessing/propertyvalues/.ipynb_checkpoints/preprocessing/.ipynb_checkpoints/edited-census_data-checkpoint.ipynb
+preprocessing/.ipynb_checkpoints/
